--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./main.css">
     <title>Ninja | Tasker</title>
 </head>
+
 <body>
     <div class="container"> 
         <div id="logo"></div>
@@ -23,9 +24,11 @@
 
         <ul>
             <% for(let index=0; index < list.length; index++ ){ %>
-                <li class="ninja-item"><%= list[index] %></li>
+                <li class="ninja-item" id="<%= index %>"><%= list[index] %></li>
             <% } %>
         </ul>
     </div>
+
+<script src="./main.js"></script>
 </body>
 </html>
